# LatticeQL

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.latticeql/: default.jsonnet
issues/: batched-query-total-semantics.txt  batched-query-value-type-mismatch.txt  bugs.txt
manuals/: column-managers.md  command-syntax.md  data-viewing.md  reordering.md  virtual-foreign-keys.md
samples/: blog-schema.sql  ecommerce-schema.sql  ecommerce.db  ecommerce.sql  support-schema.sql
samples/blog-dataset/: default.sql  medium.sql
samples/ecommerce-dataset/: default.sql  medium.sql
samples/support-dataset/: default.sql  medium.sql
src/: command_history.rs  config.rs  connection_manager.rs  engine.rs  log.rs  main.rs  rules.rs  schema.rs
src/app/: mod.rs  model.rs
src/app/column_manager/: control_panel.rs  mod.rs  module.rs  panel.rs  render.rs  service.rs  widget.rs
src/app/connection_manager/: control_panel.rs  render.rs  widget.rs
src/app/data_playground/: key_handler.rs  mod.rs  module.rs  render.rs  state.rs  types.rs  widget_dispatch.rs
src/app/log_viewer/: control_panel.rs  render.rs  widget.rs
src/app/manuals_manager/: control_panel.rs  mod.rs  render.rs  widget.rs
src/app/query_rules_manager/: control_panel.rs  render.rs  widget.rs
src/app/tui/: CLAUDE.md  control_panel.rs  keys.rs  mod.rs  render.rs
src/app/virtual_fk_manager/: control_panel.rs  (+2 more)
src/db/: mod.rs  mysql.rs  sqlite.rs
src/engine/: core.rs  mod.rs  paths.rs
src/ui/: app.rs  mod.rs  render.rs  select_list.rs
testing/: KEYS_EXPERIENCE.md
v2/: CLAUDE.md
xtask/src/: main.rs
(+6 files in other folders)
