[workspace]
members = ["xtask"]

[package]
name = "latticeql"
version = "0.1.0"
edition = "2021"
description = "Navigate complex datasets from multiple sources intuitively in a unified query interface"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "sqlite", "macros", "chrono"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
serde_json = "1"
rs-jsonnet = "0.1.22"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
